# expense-tracker

./: .gitignore  CLAUDE.md  index.html  installer.nsi  manifest.webmanifest  package-lock.json  package.json  vite.config.js
.claude/: settings.json  settings.local.json
assets/: HomeView-AY7_tw3O.js  HomeView-dV9XBSqr.js  SettingsView-Cglhyb30.css  SettingsView-DkpTEXeL.js  Statistics-BtFCToFp.css  Statistics-CWaPApR8.js  Statistics-CgUMUW6C.js  Statistics-RZy4VbT4.js  browser-FdOlkrpb.js  index-CNCJg7Cn.js  index-CWcEna5O.css  index-CeqwA_hW.js  index-GzyRKDi6.css
docs/: sw.js
docs/assets/: AddRecord-Ck0jPI_2.css  HomeView-jrVZvTch.js  browser-CGZ4PXaO.js  index-z1Md4I5A.css
pwa-output/: index.html  sw.js
pwa-output/assets/: AddRecord-CDY0-Vw2.js  AddRecord-DDjTqyCA.js  AddRecord-DtZhjQqv.js  HomeView-D_cBMcJh.css  HomeView-Ks3xO-Uk.css  SettingsView-DdlQ3bKo.css  SettingsView-k61Vns-x.js  browser-BjAiev0c.js  index-JUTpXiIk.js  index-qjLWstrw.js  tauri-CLLhuaQi.js
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs
src/assets/: styles.css
src/db/: browser.js  index.js  tauri.js
src/router/: index.js
src/store/: index.js
src/views/: AddRecord.vue  HomeView.vue  SettingsView.vue  Statistics.vue
