[package]
name = "expense-tracker"
version = "1.0.0"
description = "记账APP - 个人财务管理工具"
authors = [""]
edition = "2021"

[lib]
name = "expense_tracker_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
